# logger_cpp

./: .gitignore  README.md  test.conf
logger/: CMakeLists.txt  CMakeLists_old.txt  test.conf
logger/config/: config.conf  test.conf
logger/examples/: CMakeLists.txt  logging_threads.cc  sample1.cc
logger/include/: color_modifier.h  configuration.h  level.h  logger.h
logger/src/: application.cc  configuration.cc  logger.cc
logger/tests/: test1.cc
